--- a/2ndfebassignment.ipynb
+++ b/2ndfebassignment.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -129,9 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total electricity bill: Rs. 202.5\n"
+     ]
+    }
+   ],
    "source": [
     "# Take user input for electricity consumption\n",
     "units = int(input(\"Enter electricity units consumed: \"))\n",
@@ -158,9 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numbers whose cube is divisible by 4 or 5: [2, 4, 5, 6, 8, 10, 12, 14, 15, 16, 18, 20, 22, 24, 25, 26, 28, 30, 32, 34, 35, 36, 38, 40, 42, 44, 45, 46, 48, 50, 52, 54, 55, 56, 58, 60, 62, 64, 65, 66, 68, 70, 72, 74, 75, 76, 78, 80, 82, 84, 85, 86, 88, 90, 92, 94, 95, 96, 98, 100]\n",
+      "Numbers whose cube is divisible by 4 or 5 (while loop): [2, 4, 5, 6, 8, 10, 12, 14, 15, 16, 18, 20, 22, 24, 25, 26, 28, 30, 32, 34, 35, 36, 38, 40, 42, 44, 45, 46, 48, 50, 52, 54, 55, 56, 58, 60, 62, 64, 65, 66, 68, 70, 72, 74, 75, 76, 78, 80, 82, 84, 85, 86, 88, 90, 92, 94, 95, 96, 98, 100]\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating a list from 1 to 100\n",
     "numbers = list(range(1, 101))\n",
@@ -186,6 +203,43 @@
     "\n",
     "print(\"Numbers whose cube is divisible by 4 or 5 (while loop):\", filtered_numbers_while)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q5. Count Vowels in a String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of vowels in the string: 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = \"I want to become a data scientist\"\n",
+    "vowels = \"aeiouAEIOU\"\n",
+    "vowel_count = 0\n",
+    "\n",
+    "for char in string:\n",
+    "    if char in vowels:\n",
+    "        vowel_count += 1\n",
+    "\n",
+    "print(\"Total number of vowels in the string:\", vowel_count)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
